--- a/AnimalEditor.View/AnimalEditor.View.csproj
+++ b/AnimalEditor.View/AnimalEditor.View.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\AnimalEditor.Logic\AnimalEditor.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="ValueForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
+
 </Project>
